--- a/Registro_Estudiantes/src/main/resources/templates/estudiantes.html
+++ b/Registro_Estudiantes/src/main/resources/templates/estudiantes.html
@@ -5,13 +5,21 @@
     <title>Registro de estudiantes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body background="fondo.jpg">
+
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/}"> --Inicio </a>
+    <a class="navbar-brand" href="#">--Inicio</a>
+    <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/estudiantes}"> Control de Estudiantes</a>
+            <li class="nav-item"><a class="nav-link"
+                                    th:href="@{/estudiantes}">Control de estudiantes</a>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link"
+                                    th:href="@{/estudiantes/nuevo}">Registrar estudiantes</a>
             </li>
         </ul>
     </div>
@@ -19,15 +27,14 @@
 
 <div class="container">
     <div class="row">
-        <h1>Lista de Estudiantes</h1>
+        <h1>Lista de estudiantes</h1>
     </div>
-
-    <div class="row">
+    <div class= "row">
         <div class="col-lg-3">
             <a th:href="@{/estudiantes/nuevo}" class="btn btn-primary btn-sm mb3">Agregar estudiante</a>
+
         </div>
     </div>
-
     <br>
     <table class="table table-striped table-bordered">
         <thead class="table-dark">
@@ -40,19 +47,17 @@
         </thead>
 
         <tbody>
-        <tr th:each="estudiante: ${estudiantes}">
+        <tr th:each="estudiante : ${estudiantes}">
             <td th:text="${estudiante.nombre}">Nombre</td>
-            <td th:text="${estudiante.apellido}">Nombre</td>
-            <td th:text="${estudiante.email}">Nombre</td>
+            <td th:text="${estudiante.apellido}">Apellido</td>
+            <td th:text="${estudiante.email}">Email</td>
             <td>
                 <a th:href="@{/estudiantes/editar/{id}(id=${estudiante.id})}" class="btn btn-info">Editar</a>
                 <a th:href="@{/estudiantes/{id}(id=${estudiante.id})}" class="btn btn-danger">Eliminar</a>
             </td>
         </tr>
         </tbody>
-
     </table>
-
 </div>
 
 </body>
