--- a/Agenda_Contactos/src/main/resources/templates/nuevo.html
+++ b/Agenda_Contactos/src/main/resources/templates/nuevo.html
@@ -11,6 +11,15 @@
 
 <div class="row justify-content-center">
     <div class="col-md6 col-lg-4">
+
+        <div
+                class="bg-image"
+                style="
+                    background-image: url('https://i.pinimg.com/564x/25/c9/c9/25c9c922aa23d30731b8d7a9099e8ecd.jpg');
+                    height: 100vh;
+                    "
+        >
+
         <br>
 
         <h3 style="text-align:center" class="p-3 mb-2 bg-secondary bg-gradient text-white">Registro de Contactos</h3>
@@ -50,6 +59,8 @@
         </form>
 
     </div>
+
+</div>
 
 </div>
 
