--- a/Agenda_Contactos/src/main/resources/templates/editar.html
+++ b/Agenda_Contactos/src/main/resources/templates/editar.html
@@ -11,6 +11,17 @@
 
 <div class="row justify-content-center">
     <div class="col-md6 col-lg-4">
+
+        <div
+                class="bg-image"
+                style="
+                    background-image: url('https://i.pinimg.com/564x/25/c9/c9/25c9c922aa23d30731b8d7a9099e8ecd.jpg');
+                    height: 100vh;
+                    "
+        >
+
+
+
         <br>
 
         <h3 style="text-align:center" class="p-3 mb-2 bg-secondary bg-gradient text-white">Editar contacto</h3>
@@ -51,6 +62,7 @@
 
     </div>
 
+</div>
 </div>
 
 <script
